--- a/PLASTIC/index.html
+++ b/PLASTIC/index.html
@@ -2,67 +2,155 @@
 <html lang="es">
 <head>
   <meta charset="UTF-8">
+  <title>Plastic Scanner AI</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>AI Vision - Teachable Machine</title>
-  <script src="https://cdn.tailwindcss.com"></script>
+  <style>
+    body {
+      margin: 0;
+      height: 100vh;
+      background: radial-gradient(circle at center, #0f2027, #203a43, #2c5364);
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      justify-content: center;
+      font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+      color: #00ffe7;
+      overflow: hidden;
+    }
+
+    h1 {
+      text-align: center;
+      font-size: 2rem;
+      text-shadow: 0 0 15px #00ffe7, 0 0 30px #00ffe7;
+      margin-bottom: 20px;
+    }
+
+    #camera-container {
+      position: relative;
+      width: 300px;
+      height: 400px;
+      border: 2px solid #00ffe7;
+      border-radius: 12px;
+      box-shadow: 0 0 20px rgba(0, 255, 231, 0.6);
+      overflow: hidden;
+    }
+
+    video {
+      width: 100%;
+      height: 100%;
+      object-fit: cover;
+      transform: scaleX(-1);
+    }
+
+    /* Línea de escaneo futurista */
+    .scanner-line {
+      position: absolute;
+      top: 0;
+      left: 0;
+      width: 100%;
+      height: 4px;
+      background: rgba(0, 255, 231, 0.8);
+      animation: scan 2s infinite alternate;
+      box-shadow: 0 0 20px #00ffe7;
+    }
+
+    @keyframes scan {
+      from { top: 0; }
+      to { top: 100%; }
+    }
+
+    #label-container {
+      margin-top: 20px;
+      font-size: 1.2rem;
+      text-align: center;
+      text-shadow: 0 0 10px #00ffe7;
+    }
+
+    button {
+      margin-top: 20px;
+      padding: 12px 20px;
+      background: transparent;
+      border: 2px solid #00ffe7;
+      color: #00ffe7;
+      border-radius: 8px;
+      font-size: 1rem;
+      cursor: pointer;
+      transition: 0.3s;
+      text-transform: uppercase;
+    }
+
+    button:hover {
+      background: #00ffe7;
+      color: #0f2027;
+      box-shadow: 0 0 20px #00ffe7;
+    }
+  </style>
+</head>
+<body>
+  <h1>Plastic Scanner AI</h1>
+
+  <div id="camera-container">
+    <video id="webcam" autoplay playsinline></video>
+    <div class="scanner-line"></div>
+  </div>
+
+  <button onclick="captureAndPredict()">Escanear</button>
+  <div id="label-container">Esperando...</div>
+
+  <!-- Tensorflow y Teachable Machine -->
   <script src="https://cdn.jsdelivr.net/npm/@tensorflow/tfjs@latest/dist/tf.min.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/@teachablemachine/image@latest/dist/teachablemachine-image.min.js"></script>
-</head>
-<body class="bg-gradient-to-r from-indigo-600 via-purple-600 to-pink-600 min-h-screen flex flex-col items-center justify-center text-white">
-  
-  <h1 class="text-4xl font-bold mb-6">🤖 AI Vision</h1>
-  <p class="mb-6 text-lg opacity-90">Clasificación en vivo con <b>Teachable Machine</b></p>
 
-  <button onclick="init()" class="px-6 py-3 bg-white text-indigo-700 font-semibold rounded-lg shadow-lg hover:bg-gray-200 transition">
-    Iniciar Cámara
-  </button>
+  <script>
+    const URL = "./my_model/";
+    let model, video, labelContainer, maxPredictions;
 
-  <div id="webcam-container" class="mt-6"></div>
-  <div id="label-container" class="mt-4 space-y-2 text-lg"></div>
+    async function init() {
+      const modelURL = URL + "model.json";
+      const metadataURL = URL + "metadata.json";
+      model = await tmImage.load(modelURL, metadataURL);
+      maxPredictions = model.getTotalClasses();
 
-  <footer class="mt-12 text-sm opacity-75">
-    🚀 Desplegado en <b>Vercel</b> | Hecho con TensorFlow.js
-  </footer>
+      video = document.getElementById("webcam");
+      labelContainer = document.getElementById("label-container");
 
-<script>
-  const URL = "./my_model/";
-  let model, webcam, labelContainer, maxPredictions;
-
-  async function init() {
-    const modelURL = URL + "model.json";
-    const metadataURL = URL + "metadata.json";
-
-    model = await tmImage.load(modelURL, metadataURL);
-    maxPredictions = model.getTotalClasses();
-
-    const flip = true;
-    webcam = new tmImage.Webcam(300, 300, flip);
-    await webcam.setup();
-    await webcam.play();
-    window.requestAnimationFrame(loop);
-
-    document.getElementById("webcam-container").appendChild(webcam.canvas);
-    labelContainer = document.getElementById("label-container");
-    for (let i = 0; i < maxPredictions; i++) {
-      const label = document.createElement("div");
-      label.classList.add("bg-white", "text-indigo-700", "px-4", "py-2", "rounded-lg", "shadow-md");
-      labelContainer.appendChild(label);
+      // Pedir cámara trasera si está disponible
+      navigator.mediaDevices.getUserMedia({
+        video: { facingMode: { exact: "environment" } }
+      }).then(stream => {
+        video.srcObject = stream;
+      }).catch(err => {
+        // Si no soporta cámara trasera, usa la normal
+        navigator.mediaDevices.getUserMedia({ video: true })
+          .then(stream => { video.srcObject = stream; });
+      });
     }
-  }
 
-  async function loop() {
-    webcam.update();
-    await predict();
-    window.requestAnimationFrame(loop);
-  }
+    async function captureAndPredict() {
+      const canvas = document.createElement("canvas");
+      canvas.width = video.videoWidth;
+      canvas.height = video.videoHeight;
+      const ctx = canvas.getContext("2d");
+      ctx.drawImage(video, 0, 0, canvas.width, canvas.height);
 
-  async function predict() {
-    const prediction = await model.predict(webcam.canvas);
-    for (let i = 0; i < maxPredictions; i++) {
-      labelContainer.childNodes[i].innerHTML =
-        prediction[i].className + ": " + (prediction[i].probability * 100).toFixed(1) + "%";
+      const prediction = await model.predict(canvas);
+
+      // Buscar la clase con mayor probabilidad
+      let best = prediction.reduce((prev, current) => 
+        (prev.probability > current.probability) ? prev : current
+      );
+
+      labelContainer.innerHTML = `
+        <strong>Resultado:</strong><br>
+        ${best.className}<br>
+        <span style="font-size:0.9rem; opacity:0.8;">
+          Confianza: ${(best.probability*100).toFixed(1)}%
+        </span>
+      `;
     }
-  }
-</script>
+
+    init();
+  </script>
 </body>
 </html>
+
