--- a/PLASTIC/index.html
+++ b/PLASTIC/index.html
@@ -1,165 +1,140 @@
-<!DOCTYPE html> 
+<!DOCTYPE html>
 <html lang="es">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Plastic Scanner Pro</title>
-  <script src="https://cdn.jsdelivr.net/npm/@tensorflow/tfjs@latest"></script>
-  <script src="https://cdn.jsdelivr.net/npm/@teachablemachine/image@latest"></script>
+  <meta charset="UTF-8">
+  <title>Detector de Plástico</title>
+  <script src="https://cdn.jsdelivr.net/npm/@tensorflow/tfjs@3.9.0"></script>
+  <script src="https://cdn.jsdelivr.net/npm/@teachablemachine/image@0.8/dist/teachablemachine-image.min.js"></script>
   <style>
     body {
-      font-family: "Segoe UI", Tahoma, sans-serif;
-      background: linear-gradient(135deg, #0f2027, #203a43, #2c5364);
-      color: #fff;
+      font-family: Arial, sans-serif;
+      background: #0f172a;
+      color: #f1f5f9;
       text-align: center;
-      margin: 0;
       padding: 20px;
     }
-    h1 { font-size: 2rem; margin-bottom: 10px; }
-    #preview {
-      width: 260px; height: 260px;
-      border: 3px solid #0ff; border-radius: 12px;
-      margin: 20px auto;
-      display: flex; align-items: center; justify-content: center;
-      background: rgba(0, 255, 255, 0.05);
-      box-shadow: 0 0 25px rgba(0, 255, 255, 0.3);
-      position: relative; overflow: hidden;
+    h1 {
+      margin-bottom: 20px;
+      color: #38bdf8;
     }
-    #preview img { width: 100%; height: 100%; object-fit: cover; border-radius: 12px; }
-    .scan-line {
-      position: absolute; width: 100%; height: 4px;
-      background: rgba(0, 255, 255, 0.8);
+    input {
+      margin: 20px 0;
+      padding: 10px;
+      border-radius: 8px;
+      border: none;
+      background: #1e293b;
+      color: #f1f5f9;
+    }
+    #preview {
+      width: 300px;
+      margin: 20px auto;
+      border: 3px solid #38bdf8;
+      border-radius: 10px;
+      position: relative;
+    }
+    /* Animación de escaneo */
+    #scanner {
+      position: absolute;
+      top: 0;
+      left: 0;
+      width: 100%;
+      height: 100%;
+      border-radius: 10px;
+      background: linear-gradient(to bottom, rgba(56,189,248,0.3), rgba(56,189,248,0));
       animation: scan 2s linear infinite;
       display: none;
     }
-    @keyframes scan { 0% { top: 0; } 100% { top: 100%; } }
-    #result { margin-top: 20px; font-size: 1.4rem; font-weight: bold; color: #0ff; }
-    #confidenceBar {
-      width: 80%; height: 20px; margin: 10px auto;
-      background: rgba(255, 255, 255, 0.2);
-      border-radius: 10px; overflow: hidden;
-      box-shadow: 0 0 10px rgba(0,255,255,0.4);
+    @keyframes scan {
+      0% { transform: translateY(-100%); }
+      100% { transform: translateY(100%); }
     }
-    #confidenceFill {
-      height: 100%; width: 0%;
-      background: linear-gradient(90deg, #0ff, #00c3ff);
-      transition: width 0.5s ease;
+    /* Loader */
+    #loader {
+      margin-top: 20px;
+      display: none;
     }
-    button {
-      background: #0ff; border: none; color: #000;
-      font-size: 1rem; padding: 10px 18px; margin: 10px 5px;
-      border-radius: 8px; cursor: pointer; transition: 0.3s;
+    .spinner {
+      border: 6px solid #1e293b;
+      border-top: 6px solid #38bdf8;
+      border-radius: 50%;
+      width: 40px;
+      height: 40px;
+      animation: spin 1s linear infinite;
+      margin: auto;
     }
-    button:hover { background: #06c4c4; }
-    #history { margin-top: 30px; text-align: left; max-width: 400px; margin-left: auto; margin-right: auto; }
-    .history-item {
-      background: rgba(255, 255, 255, 0.1);
-      border-radius: 8px; padding: 8px; margin-bottom: 8px;
-      display: flex; align-items: center; gap: 10px;
+    @keyframes spin {
+      0% { transform: rotate(0deg); }
+      100% { transform: rotate(360deg); }
     }
-    .history-item img { width: 50px; height: 50px; object-fit: cover; border-radius: 6px; }
+    /* Resultado */
+    #result {
+      margin-top: 20px;
+      font-size: 20px;
+      font-weight: bold;
+      color: #38bdf8;
+      display: none;
+    }
   </style>
 </head>
 <body>
-  <h1>Plastic Scanner Pro</h1>
-  <p>Captura una foto para identificar el tipo de plástico</p>
+  <h1>🔍 Detector de Plástico</h1>
 
-  <div id="preview">
-    <div class="scan-line" id="scanLine"></div>
-    <img id="photo" src="" alt="Preview" />
+  <!-- Botón cámara -->
+  <input type="file" accept="image/*" capture="environment" id="cameraInput">
+
+  <div style="position:relative; display:inline-block;">
+    <img id="preview" style="display:none;">
+    <div id="scanner"></div>
   </div>
 
-  <input type="file" accept="image/*" capture="environment" id="cameraInput" style="display:none">
-  <button onclick="document.getElementById('cameraInput').click()">📷 Tomar Foto</button>
-  <button onclick="shareResult()">📤 Compartir</button>
-
-  <div id="result">Esperando foto...</div>
-  <div id="confidenceBar"><div id="confidenceFill"></div></div>
-
-  <div id="history">
-    <h3>📑 Historial</h3>
-    <div id="historyList"></div>
-  </div>
-
-  <!-- Canvas oculto para análisis -->
-  <canvas id="hiddenCanvas" style="display:none;"></canvas>
+  <div id="loader"><div class="spinner"></div></div>
+  <div id="result"></div>
 
   <script>
     const URL = "./my_model/";
     let model, maxPredictions;
-    let lastResult = "";
 
-    async function loadModel() {
+    async function init() {
       const modelURL = URL + "model.json";
       const metadataURL = URL + "metadata.json";
       model = await tmImage.load(modelURL, metadataURL);
       maxPredictions = model.getTotalClasses();
-      document.getElementById("result").innerText = "Modelo cargado. Listo para analizar.";
     }
-    loadModel();
 
-    const cameraInput = document.getElementById("cameraInput");
-    const photo = document.getElementById("photo");
-    const result = document.getElementById("result");
-    const confidenceFill = document.getElementById("confidenceFill");
-    const historyList = document.getElementById("historyList");
-    const scanLine = document.getElementById("scanLine");
-    const hiddenCanvas = document.getElementById("hiddenCanvas");
-    const ctx = hiddenCanvas.getContext("2d");
+    init();
 
-    cameraInput.addEventListener("change", async (event) => {
+    document.getElementById("cameraInput").addEventListener("change", async function(event) {
       const file = event.target.files[0];
-      if (file) {
-        const reader = new FileReader();
-        reader.onload = function(e) {
-          photo.src = e.target.result;
+      if (!file) return;
 
-          photo.onload = async () => {
-            scanLine.style.display = "block";
-            result.innerText = "Escaneando...";
+      const img = document.getElementById("preview");
+      const scanner = document.getElementById("scanner");
+      const loader = document.getElementById("loader");
+      const result = document.getElementById("result");
 
-            await new Promise(r => setTimeout(r, 1200));
+      img.src = URL.createObjectURL(file);
+      img.style.display = "block";
+      scanner.style.display = "block";
+      loader.style.display = "block";
+      result.style.display = "none";
 
-            // dibujar en canvas oculto
-            hiddenCanvas.width = photo.naturalWidth;
-            hiddenCanvas.height = photo.naturalHeight;
-            ctx.drawImage(photo, 0, 0);
+      img.onload = async () => {
+        const prediction = await model.predict(img);
 
-            // usar el canvas para predecir
-            const prediction = await model.predict(hiddenCanvas);
-            prediction.sort((a, b) => b.probability - a.probability);
-            const best = prediction[0];
+        // Buscar la clase más probable
+        let best = prediction.reduce((a, b) => a.probability > b.probability ? a : b);
 
-            lastResult = `${best.className} (${(best.probability * 100).toFixed(1)}%)`;
-
-            result.innerHTML = `🔍 Detectado: <span style="color:#fff">${best.className}</span>`;
-            confidenceFill.style.width = (best.probability * 100).toFixed(1) + "%";
-
-            scanLine.style.display = "none";
-
-            if (navigator.vibrate) navigator.vibrate(300);
-            new Audio("https://actions.google.com/sounds/v1/alarms/beep_short.ogg").play();
-
-            const item = document.createElement("div");
-            item.classList.add("history-item");
-            item.innerHTML = `<img src="${e.target.result}"><span>${lastResult}</span>`;
-            historyList.prepend(item);
-          };
-        };
-        reader.readAsDataURL(file);
-      }
+        // Simular tiempo de "escaneo"
+        setTimeout(() => {
+          scanner.style.display = "none";
+          loader.style.display = "none";
+          result.style.display = "block";
+          result.innerHTML = `✅ Esto es: <span style="color:#facc15">${best.className}</span> 
+                              <br> Confianza: ${(best.probability * 100).toFixed(2)}%`;
+        }, 2000);
+      };
     });
-
-    function shareResult() {
-      if (navigator.share && lastResult) {
-        navigator.share({
-          title: "Plastic Scanner Pro",
-          text: "Resultado del análisis: " + lastResult
-        });
-      } else {
-        alert("Compartir no soportado en este dispositivo.");
-      }
-    }
   </script>
 </body>
 </html>
+
